packages/concerto-cto/test/cto/bad/self-extending-asset.bad.cto
namespace com.acme@1.0.0

asset Self_Extending extends Self_Extending {
  o String foo optional
}
